# HackerXAPI

./: .envexample  Cargo.toml  CurlCommandToTestAPI.txt  README.md  curlcommand2.txt  manual.txt  mysqldb.txt  output.txt  payload.json  payloadbin.json  payloaddocx.json  payloadpng.json  payloadpptx.json  payloadxlsx.json  payloadxlsx2.json  payloadzip.json  responseexample.json  sampleinput.txt  sampleoutput.txt  sim.sh  simr4.sh  test.sh
csvs/: Salary_20data.csv
logs/: prompt_sent_logs.txt
payloads/: aarogya.json  aarogya2.json  cons.json  cons2.json  doc.json  fact.json  happy.json  image.json  image2.json  medicare.json  pp.json  principia.json  r41.json  r42.json  r43.json  splendor.json  uni.json  xl.json  xl2.json
pdfs/: .~lock.Fact_20Check.docx#  Arogya_20Sanjeevani_20Policy_20-_20CIN_20-_20U10200WB1906GOI001713_201.txt  Arogya_20Sanjeevani_20Policy_20-_20CIN_20-_20U10200WB1906GOI001713_201_contextfiltered.txt  Fact_20Check.txt  Fact_20Check_contextfiltered.txt  Family_20Medicare_20Policy_20_UIN-_20UIIHLIP22070V042122__201.txt  Family_20Medicare_20Policy_20_UIN-_20UIIHLIP22070V042122__201_contextfiltered.txt  FinalRound4SubmissionPDF.txt  FinalRound4SubmissionPDF_contextfiltered.txt  Happy_20Family_20Floater_20-_202024_20OICHLIP25046V062425_201_contextfiltered.txt  Mediclaim_20Insurance_20Policy.txt  Mediclaim_20Insurance_20Policy_contextfiltered.txt  News.txt  News_contextfiltered.txt  Pincode_20data.txt  Super_Splendor__Feb_2023__contextfiltered.txt  Test_20Case_20HackRx_contextfiltered.txt  UNI_20GROUP_20HEALTH_20INSURANCE_20POLICY_20-_20UIIHLGP26043V022526_201.txt  contextfiltered.txt  dnn_contextfiltered.txt  image.txt  newton.txt  (+17 more)
(+71 files in other folders)
